# RAG_VectorDB

./: app.py  pdfLoader.ipynb  pyproject.toml  test.py
faiss_store/: faiss_index  metadata.pkl
src/: data_loader.py  embedding.py  search.py  vectorstore.py
